[package]
name = "glpk-sys"
version = "0.1.0"
authors = ["seu <seu@panopticon.re>"]
links = "glpk"
build = "src/build.rs"

description = "GLPK bindings for Rust."
repository = "https://github.com/flanfly/glpk-sys.git"

readme = "README.md"

keywords = ["glpk", "linear", "integer"]

license = "GPL-3.0"

[dependencies]
libc = "0.1"
